--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@types/leaflet": "^1.9.20",
     "@types/nodemailer": "^6.4.17",
     "autoprefixer": "^10.4.20",
+    "axios": "^1.12.2",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
