--- a/package.json
+++ b/package.json
@@ -3,91 +3,92 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "build": "next build",
+    "build": "node --max-old-space-size=4096 ./node_modules/next/dist/bin/next build",
     "dev": "next dev",
     "lint": "next lint",
     "start": "next start"
   },
   "dependencies": {
+    "@auth/core": "latest",
     "@aws-sdk/credential-providers": "latest",
     "@emotion/is-prop-valid": "latest",
     "@hookform/resolvers": "^3.9.1",
     "@mongodb-js/zstd": "latest",
-    "@next-auth/mongodb-adapter": "^1.1.3",
-    "@radix-ui/react-accordion": "1.2.2",
-    "@radix-ui/react-alert-dialog": "1.1.4",
-    "@radix-ui/react-aspect-ratio": "1.1.1",
-    "@radix-ui/react-avatar": "1.1.2",
-    "@radix-ui/react-checkbox": "1.1.3",
-    "@radix-ui/react-collapsible": "1.1.2",
-    "@radix-ui/react-context-menu": "2.2.4",
-    "@radix-ui/react-dialog": "1.1.4",
-    "@radix-ui/react-dropdown-menu": "2.1.4",
-    "@radix-ui/react-hover-card": "1.1.4",
-    "@radix-ui/react-label": "2.1.1",
-    "@radix-ui/react-menubar": "1.1.4",
-    "@radix-ui/react-navigation-menu": "1.2.3",
-    "@radix-ui/react-popover": "1.1.4",
-    "@radix-ui/react-progress": "1.1.1",
-    "@radix-ui/react-radio-group": "1.2.2",
-    "@radix-ui/react-scroll-area": "1.2.2",
-    "@radix-ui/react-select": "2.1.4",
-    "@radix-ui/react-separator": "1.1.1",
-    "@radix-ui/react-slider": "1.2.2",
-    "@radix-ui/react-slot": "1.1.1",
-    "@radix-ui/react-switch": "1.1.2",
-    "@radix-ui/react-tabs": "1.1.2",
-    "@radix-ui/react-toast": "1.2.4",
-    "@radix-ui/react-toggle": "1.1.1",
-    "@radix-ui/react-toggle-group": "1.1.1",
-    "@radix-ui/react-tooltip": "1.1.6",
-    "@stripe/stripe-js": "^7.8.0",
-    "@types/bcryptjs": "^3.0.0",
-    "@types/jsonwebtoken": "^9.0.10",
-    "@types/leaflet": "^1.9.20",
-    "@types/nodemailer": "^6.4.17",
+    "@next-auth/mongodb-adapter": "latest",
+    "@radix-ui/react-accordion": "latest",
+    "@radix-ui/react-alert-dialog": "latest",
+    "@radix-ui/react-aspect-ratio": "latest",
+    "@radix-ui/react-avatar": "latest",
+    "@radix-ui/react-checkbox": "latest",
+    "@radix-ui/react-collapsible": "latest",
+    "@radix-ui/react-context-menu": "latest",
+    "@radix-ui/react-dialog": "latest",
+    "@radix-ui/react-dropdown-menu": "latest",
+    "@radix-ui/react-hover-card": "latest",
+    "@radix-ui/react-label": "latest",
+    "@radix-ui/react-menubar": "latest",
+    "@radix-ui/react-navigation-menu": "latest",
+    "@radix-ui/react-popover": "latest",
+    "@radix-ui/react-progress": "latest",
+    "@radix-ui/react-radio-group": "latest",
+    "@radix-ui/react-scroll-area": "latest",
+    "@radix-ui/react-select": "latest",
+    "@radix-ui/react-separator": "latest",
+    "@radix-ui/react-slider": "latest",
+    "@radix-ui/react-slot": "latest",
+    "@radix-ui/react-switch": "latest",
+    "@radix-ui/react-tabs": "latest",
+    "@radix-ui/react-toast": "latest",
+    "@radix-ui/react-toggle": "latest",
+    "@radix-ui/react-toggle-group": "latest",
+    "@radix-ui/react-tooltip": "latest",
+    "@react-email/render": "latest",
+    "@vercel/analytics": "1.3.1",
     "autoprefixer": "^10.4.20",
-    "bcryptjs": "^3.0.2",
+    "bcryptjs": "latest",
+    "child_process": "latest",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "cmdk": "1.0.4",
-    "crypto-js": "^4.2.0",
+    "cmdk": "latest",
+    "crypto": "latest",
     "date-fns": "4.1.0",
-    "embla-carousel-react": "8.5.1",
+    "embla-carousel-react": "latest",
     "framer-motion": "latest",
+    "fs": "latest",
     "gcp-metadata": "latest",
     "geist": "^1.3.1",
-    "input-otp": "1.4.1",
-    "jose": "^6.0.12",
-    "jsonwebtoken": "^9.0.2",
+    "immer": "latest",
+    "input-otp": "latest",
+    "jsonwebtoken": "latest",
     "kerberos": "latest",
-    "leaflet": "^1.9.4",
+    "leaflet": "latest",
     "lucide-react": "^0.454.0",
     "mongodb": "latest",
     "mongodb-client-encryption": "latest",
-    "mongoose": "^8.17.0",
-    "next": "14.2.16",
-    "next-auth": "^4.24.11",
-    "next-themes": "^0.4.4",
-    "nodemailer": "^6.10.1",
+    "mongoose": "latest",
+    "next": "^14.2.33",
+    "next-auth": "latest",
+    "next-themes": "latest",
+    "nodemailer": "latest",
+    "path": "latest",
     "react": "^18",
-    "react-day-picker": "9.8.0",
+    "react-day-picker": "latest",
     "react-dom": "^18",
-    "react-hook-form": "^7.54.1",
-    "react-is": "^19.1.1",
-    "react-leaflet": "^5.0.0",
-    "react-resizable-panels": "^2.1.7",
+    "react-hook-form": "latest",
+    "react-leaflet": "^4.2.1",
+    "react-resizable-panels": "latest",
     "recharts": "latest",
-    "resend": "^6.0.0",
+    "resend": "latest",
     "snappy": "latest",
     "socks": "latest",
-    "sonner": "^1.7.1",
-    "stripe": "^18.4.0",
+    "sonner": "latest",
+    "stripe": "latest",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
-    "vaul": "^0.9.6",
+    "use-sync-external-store": "latest",
+    "vaul": "latest",
     "zod": "^3.24.1",
-    "zustand": "^5.0.7"
+    "zustand": "latest"
   },
   "devDependencies": {
     "@types/node": "^22",
