Expand .dockerignore to reduce build context size

--- a/.dockerignore
+++ b/.dockerignore
@@ -7,3 +7,18 @@ node_modules
 *.log
 .DS_Store
 .vercel
+.git
+.gitignore
+.env
+.env.local
+*.log
+node_modules
+.next
+.vercel
+*.zip
+*.tar.gz
+public/
+scripts/
+.vscode/
+.idea/
+*.md
