--- a/.dockerignore
+++ b/.dockerignore
@@ -7,18 +7,15 @@ node_modules
 *.log
 .DS_Store
 .vercel
-.git
-.gitignore
-.env
-.env.local
-*.log
-node_modules
-.next
-.vercel
 *.zip
 *.tar.gz
-public/
 scripts/
 .vscode/
 .idea/
 *.md
+deployment.log
+dev.log
+gcloud-sdk.zip
+deploy.sh
+deploy-to-cloud-run.sh
+deploy-cloud-run.ps1
